--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button id="powersaving-on">PSM on</button>
         <button id="powersaving-off">PSM off</button>
       </p>
+      <input type="range" min="1" max="32" value="20" id="temperature-slider" />
     </section>
   </body>
 </html>
