Added thermostat energy usage colours

--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <script src="jquery.js"></script>
     <script src="./public/javascripts/interface.js"></script>
     <script src="./public/javascripts/thermostat.js"></script>
+    <style>
+      .low-usage {
+        color: green;
+      }
+
+      .medium-usage {
+        color: black;
+      }
+
+      .high-usage {
+        color: red;
+      }
+    </style>
   </head>
   <body>
     <section>
