--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <script src="./public/javascripts/thermostat.js"></script>
       <style>
         body {
-          background-color: coral;
+          background-color: lightgrey;
         }
 
         .select-css {
@@ -29,7 +29,7 @@
           color: #444;
           line-height: 1.3;
           padding: 0.6em 1.4em 0.5em 0.8em;
-          width: 8%;
+          width: 35%;
           max-width: 100%;
           box-sizing: border-box;
           margin: 0;
@@ -70,7 +70,7 @@
         .btn {
           font-family: "Oswald";
           border: none;
-          outline: none;
+          /* outline: none; */
           background-color: inherit;
           /* padding: 14px 28px; */
           font-size: 40px;
@@ -90,9 +90,28 @@
           color: red;
         }
 
-        .simple {
+        /* .simple {
           width: 500px;
           margin: 10px auto;
+        } */
+        .low-emoji {
+          color: green;
+        }
+
+        .medium-emoji {
+          color: black;
+        }
+
+        .high-emoji {
+          color: black;
+        }
+
+        .box {
+          background-color: coral;
+          width: 300px;
+          border: 5px solid purple;
+          padding: 50px;
+          margin: 20px;
         }
 
         h1 {
@@ -104,31 +123,32 @@
       </style>
     </head>
     <body>
-      <section>
-        <h3>Power saving mode is <span id="power-saving-status">on</span></h3>
-        <div class="simple">
+      <div class="box">
+        <section>
+          <h3>Power saving mode is <span id="power-saving-status">on</span></h3>
           <h1 style="font-size: 120px;line-height: 0;" id="temperature"></h1>
-        </div>
-        <i class="em em-fire"></i><i class="em em-snowflake"></i>
-        <h1 style="line-height: 20px;height: 20px;">
-          <button class="btn" id="temperature-up">
-            +
-          </button>
-          <button class="btn" id="temperature-down">-</button>
-        </h1>
-        <button class="btn" id="temperature-reset">Reset</button>
-        <p>
-          <button class="btn" id="powersaving-on">PSM on</button>
-          <button class="btn" id="powersaving-off">PSM off</button>
-        </p>
-        <h1>Current temp: <span id="current-temperature"></span></h1>
-        <select class="select-css" id="current-city">
-          <option value="london">London</option>
-          <option value="paris">Paris</option>
-          <option value="tokyo">Tokyo</option>
-          <option value="sydney">Sydney</option>
-        </select>
-      </section>
+          <i class="em em-fire"></i><i class="em em-snowflake"></i>
+          <h1 style="line-height: 20px;height: 20px;">
+            <button class="btn" id="temperature-up">
+              +
+            </button>
+            <button class="btn" id="temperature-down">-</button>
+          </h1>
+          <button class="btn" id="temperature-reset">Reset</button>
+          <p>
+            <button class="btn" id="powersaving-on">PSM on</button>
+            <button class="btn" id="powersaving-off">PSM off</button>
+          </p>
+          <h1>Current temp: <span id="current-temperature"></span></h1>
+          <select class="select-css" id="current-city">
+            <option value="london">London</option>
+            <option value="london">London</option>
+            <option value="paris">Paris</option>
+            <option value="tokyo">Tokyo</option>
+            <option value="sydney">Sydney</option>
+          </select>
+        </section>
+      </div>
     </body>
   </html>
 </center>
